--- a/Ek-ecommerce/resources/views/auth/loginShow.edge
+++ b/Ek-ecommerce/resources/views/auth/loginShow.edge
@@ -18,6 +18,7 @@
                 @endif
 
                 <form action="{{ route('auth.login')}}" method="POST">
+                    {{ csrfField() }}
                     <div class="form-group">
                         <label for="email">Username or Email</label>
                         <input type="text" name="uid" placeholder="Username or Email Address" required />
