--- a/Ek-ecommerce/resources/views/dashboard/users/create.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/create.edge
@@ -5,6 +5,7 @@
     <div class="row p-4">
         <div class="col-md-10">
             <form action="{{ route('dashboard.users.store') }}" method="post">
+                {{ csrfField() }}
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" id="username" class="form-control" placeholder="Enter the username" required>
