--- a/Ek-ecommerce/resources/views/dashboard/users/edit.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/edit.edge
@@ -5,6 +5,7 @@
     <div class="row p-4">
         <div class="col-md-10">
             <form action="{{ route('dashboard.users.update', {id: user.id}, {qs: {_method: 'PUT'}}) }}" method="POST">
+                {{ csrfField() }}
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" id="username" class="form-control" placeholder="Enter the username" value="{{ user.username }}" required>
