--- a/Ek-ecommerce/resources/views/dashboard/users/index.edge
+++ b/Ek-ecommerce/resources/views/dashboard/users/index.edge
@@ -25,6 +25,7 @@
                 <td class="d-flex">
                     <a href="{{ route('dashboard.users.edit', { id: user.id }) }}" class="btn btn-sm btn-warning">Edit</a>
                     <form action="{{ route('dashboard.users.destroy', { id: user.id }, { qs: { _method: 'DELETE' }}) }}" method="post">
+                        {{ csrfField() }}
                         <button type="submit" class="btn btn-sm btn-danger ml-2">Delete</button>
                     </form>
                 </td>
